ubiquity (1.4.2) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Update templates for migration-assistant.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 16 Mar 2007 08:32:05 +0000

ubiquity (1.4.1) feisty; urgency=low

  * Make the timezone database a singleton, saving about 2MB of memory.
  * Avoid storing temporary variables as members of the (long-lived)
    SystemTzInfo class.
  * Fix broken call to kboot-installer.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 15 Mar 2007 16:58:29 +0000

ubiquity (1.4.0) feisty; urgency=low

  [ Colin Watson ]
  * Use just one progress message for all target-config hooks, to avoid
    uglinesses like "Running 32gnome_power_manager".
  * KDE frontend: In the partition create dialog, set the maximum partition
    size before setting the value to avoid the value being incorrectly
    clipped.
  * Disable the intro message for beta.
  * Add kboot-installer integration for powerpc/ps3. Explicitly detect the
    subarchitecture and select which boot loader to install based on it.
  * Automatic update of included source packages: grub-installer
    1.20ubuntu3, migration-assistant 0.4.2, partman-base 105ubuntu1,
    partman-partitioning 47ubuntu1, user-setup 1.8ubuntu2, yaboot-installer
    1.1.8ubuntu2.

  [ Evan Dandrea ]
  * When m-a is disabled, don't try to run its apply script. (LP: 89821)
  * If migration-assistant cannot unmount a partition, prompt the user
    to do it manually. (LP: 89605)
  * Added another descriptive label to the Migrate page.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 15 Mar 2007 03:41:04 +0000

ubiquity (1.3.27) feisty; urgency=low

  * Add a 'debian/rules update-local' target to allow updating d-i/source/
    without updating debian/changelog, which is sometimes convenient for
    local hacking.
  * New partitioner: Add validation for system partitions being formatted
    (LP: #89461).
  * Really use MyKeyboardNames.pl (based on xkb-data) rather than
    KeyboardNames.pl.